--- a/3rdpage.html
+++ b/3rdpage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>second stop on the page</title>
+    <title>Third stop on page</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
@@ -12,10 +12,10 @@
 
 <body>
     <div>   
-        <img src=82.png width=800 length =800>
-        <p>Wallpaper 2</p>
+        <img src=19.png width=800 length =800>
+       
+        <p>Wallpaper 3</p>
    </div>
-   <button><a href='index.html'>return</a></button>
-   <button><a href='3rdpage.html'>Next</a></button>
+   <button><a href='2ndpage.html'>return</a></button>
 </body>
 </html>
